SZ-001: init: first post;

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -3,8 +3,8 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: 'My Online Courses' # Website name
-baseURL: 'https://example.com/' # Website URL
+title: "دوره‌های سبزیاد" # Website name
+baseURL: 'https://sabzyad.com/' # Website URL
 
 ############################
 ## PAGE OPTIONS
@@ -25,7 +25,7 @@ cascade:
 ## LANGUAGE
 ############################
 
-defaultContentLanguage: en
+defaultContentLanguage: fa
 hasCJKLanguage: false
 defaultContentLanguageInSubdir: false
 removePathAccents: true
