--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,8 +18,8 @@ marketing:
     site_type: Organization
     local_business_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo learning theme powered by Hugo Blox Builder.'
-    twitter: 'GetResearchDev'
+    description: 'سایت آموزش رایگان هوش مصنوعی و رباتیک به زبان فارسی.'
+    twitter: 'miraddo_'
   analytics:
     google_analytics: ''
     baidu_tongji: ''
