--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,23 +4,23 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Home
+  - name: خانه
     url: '/'
     weight: 10
-  - name: Courses
+  - name: دوره‌ها
     weight: 20
     identifier: courses
-  - name: Data science
-    PageRef: course/data-science/_index.md
+  - name: هوش مصنوعی
+    PageRef: course/artificial-intelligence/_index.md
     weight: 10
     parent: courses
-  - name: Robotics
+  - name: رباتیک
     PageRef: course/robotics/_index.md
     weight: 20
     parent: courses
-  - name: Blog
+  - name: وبلاگ
     PageRef: post/_index.md
     weight: 30
-  - name: Contact
+  - name: تماس با ما
     PageRef: contact/index.md
     weight: 60
